# real-time-bias-aware-DA

./: README.md  environment.yml  pyproject.toml  setup.py
scripts/mains/: main_Lorenz.py  main_annular.py  main_cylinder.py
scripts/mains/default_parameters/: annular.py  lorenz63.py  rijke.py
scripts/tutorials/: 00_Class_Model.ipynb  01_Class_EchoStateNetwork.ipynb  02_Class_ESN_model.ipynb  03_Class_POD.ipynb  04_create_truth.ipynb  10_real-time-DA_intro.ipynb  11_real-time-DA-augmented-state.ipynb  12_real-time-DA_Lorenz63.ipynb  13_bias-aware-DA-intro.ipynb  20_Rijke_LOM.ipynb  21_TADA_Rijke_twin.ipynb  22_TABADA_Rijke_CMAME.ipynb  24_TA_azimuthal_data.ipynb  25_TABADA_annular_raw.ipynb
src/: __init__.py  bias.py  create.py  model.py  models_datadriven.py  plot_results.py  run.py  utils.py
src/models_data_driven/: __init__.py  esn.py  pod_esn.py
src/models_physical/: KS.py  __init__.py  annular.py  kuramoto_sivashinsky.py  lorenz63.py  rijke.py  van_der_pol.py
src/post_processing/: annular.py  cylinder.py
src/tools_ML/: EchoStateNetwork.py  POD.py  __init__.py
